style: fix color contrast

--- a/apps/site/components/Common/Searchbox/Footer/index.module.css
+++ b/apps/site/components/Common/Searchbox/Footer/index.module.css
@@ -19,8 +19,8 @@
     items-center
     gap-2
     text-sm
-    text-neutral-700
-    dark:text-neutral-400;
+    text-neutral-800
+    dark:text-neutral-600;
 }
 
 .shortcutWrapper {
